# careeros

./: .gitignore
careeros-backend/: pyproject.toml
careeros-backend/app/: ai_service.py  auth.py  config.py  database.py  main.py  routes.py  schemas.py
careeros-frontend/: index.html  package-lock.json  package.json
careeros-frontend/src/: App.tsx
careeros-frontend/src/contexts/: AuthContext.tsx
careeros-frontend/src/lib/: api.ts
careeros-frontend/src/pages/: ATSSimulatorPage.tsx  AchievementsPage.tsx  ApplicationsPage.tsx  Dashboard.tsx  InterviewerPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  TailorPage.tsx
extension/: contentScript.js  manifest.json  popup.html  popup.js
